[package]
name = "tokio-server-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
redis = "0.23.1"
serde = "1.0.178"
dashmap = "5.5.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }